:art: feat: adicionar animação ao scroll

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Desenvolvimento Web, Front-end, Back-end, Mobile, UX/UI Design, HTML, CSS, JavaScript, React, Node.js, PHP, MySQL, MongoDB, Figma, Adobe XD, Photoshop, Illustrator">
     <meta name="author" content="Filipe Mota - fmota-dev">
 
-    <link rel="stylesheet" href="./assets/css/style.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/imgs/img-principal.svg" type="image/svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -119,7 +119,7 @@
             </div>
         </section>
 
-        <section class="formacao linha-detalhe" id="formacao">
+        <section class="formacao linha-detalhe js-scroll" id="formacao">
             <div class="container">
                 <div class="img-formacao">
                     <img src="../assets/imgs/img-sobre.svg" alt="Imagem de um desenvolvedor">
@@ -157,7 +157,7 @@
                 </div>
         </section>
 
-        <section class="projetos linha-detalhe" id="projetos">
+        <section class="projetos linha-detalhe js-scroll" id="projetos">
             <div class="container ">
                 <h2 class="titulo ">
                     meus <span>projetos.</span>
@@ -199,7 +199,7 @@
             </a>
         </section>
 
-        <section class="formulario linha-detalhe" id="fale-comigo">
+        <section class="formulario linha-detalhe js-scroll" id="fale-comigo">
             <div class="container">
                 <h2 class="titulo ">
                     fale <span>comigo.</span>
