:art: feat: adicionar imagens dos projetos via css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Desenvolvimento Web, Front-end, Back-end, Mobile, UX/UI Design, HTML, CSS, JavaScript, React, Node.js, PHP, MySQL, MongoDB, Figma, Adobe XD, Photoshop, Illustrator">
     <meta name="author" content="Filipe Mota - fmota-dev">
 
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.min.css">
     <link rel="shortcut icon" href="./assets/imgs/img-principal.svg" type="image/svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -163,29 +163,28 @@
                     meus <span>projetos.</span>
                 </h2>
                 <div class="box-projetos">
-                    <div class="img-projeto" style="background-image: url(./assets/imgs/bikcraft.jpg);">
+                    <div class="img-projeto">
                         <div class="overlay">
                             <a href="https://fmota-dev.github.io/projeto-bikcraft/" target="_blank">Bikcraft
                                 <img src="./assets/imgs/icon-link.svg" alt="">
                             </a>
                         </div>
                     </div>
-                    <div class="img-projeto" style="background-image: url(./assets/imgs/canesfit.jpg);">
+                    <div class="img-projeto">
                         <div class="overlay">
                             <a href="https://fmota-dev.github.io/projeto-canesfit/" target="_blank">Canesfit
                                 <img src="./assets/imgs/icon-link.svg" alt="">
                             </a>
                         </div>
                     </div>
-                    <div class="img-projeto" style="background-image: url(./assets/imgs/surfnat.png);">
+                    <div class="img-projeto">
                         <div class="overlay">
                             <a href="https://fmota-dev.github.io/projeto-surfnat/" target="_blank">Surfnat
                                 <img src="./assets/imgs/icon-link.svg" alt="">
                             </a>
-
                         </div>
                     </div>
-                    <div class="img-projeto" style="background-image: url(./assets/imgs/wildbeast.jpg);">
+                    <div class="img-projeto">
                         <div class="overlay">
                             <a href="https://fmota-dev.github.io/projeto-wildbeast/" target="_blank">Wildbeast
                                 <img src="./assets/imgs/icon-link.svg" alt="">
