:art: feat: adicionar strong na intro

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                     <h1 class="fadeInDown" data-anime="200">Muito prazer, <span data-anime="200">me chamo Filipe Mota.</span></h1>
 
                     <p class="fadeInDown" data-anime="400">Atualmente, estou imerso no universo do Desenvolvimento Web, concentrando meus estudos nas áreas
-                        de front-end, back-end e Mobile. Além de me especializar em UX/UI Designer.</p>
+                        de <strong>front-end</strong>, <strong>back-end</strong> e <strong>Mobile</strong>. Além de me especializar em <strong>UX/UI Designer</strong>.</p>
 
                     <p class="fadeInDown" data-anime="600"> Estou entusiasmado em aplicar essas habilidades e conhecimentos no cenário do Desenvolvimento
-                        Web, contribuindo para projetos inovadores e desafiadores.</p>
+                        Web, contribuindo para projetos <strong>inovadores</strong> e <strong>desafiadores</strong>.</p>
 
                     <div class="btn-social fadeInDown" data-anime="800">
                         <a href="https://wa.me/5584988139069" target="_blank">
