feat: adicionado nova formação

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                     </div>
 
                     <div class="card-formacao">
-                        <h3>ORIGAMID</h3>
-                        <p>HTML & CSS</p>
-                        <P>Carga horária - 46hrs</P>
+                        <h3>LOGI SISTEMAS</h3>
+                        <p>Banco de dados | SQL Server</p>
+                        <P>Carga horária - 80hrs</P>
                         <span>CONCLUIDO</span>
                     </div>
 
@@ -150,10 +150,19 @@
 
                     <div class="card-formacao">
                         <h3>ORIGAMID</h3>
+                        <p>HTML & CSS</p>
+                        <P>Carga horária - 46hrs</P>
+                        <span>CONCLUIDO</span>
+                    </div>
+
+                    <div class="card-formacao">
+                        <h3>ORIGAMID</h3>
                         <p>UX/UI Design Avançado</p>
                         <P>Carga horária - 96hrs</P>
                         <span>CONCLUÍDO</span>
                     </div>
+
+
                 </div>
         </section>
 
