feat: junção da formação da origamid

--- a/index.html
+++ b/index.html
@@ -148,21 +148,13 @@
                         <span>CONCLUÍDO</span>
                     </div>
 
+            
                     <div class="card-formacao">
                         <h3>ORIGAMID</h3>
-                        <p>HTML & CSS</p>
-                        <P>Carga horária - 46hrs</P>
-                        <span>CONCLUIDO</span>
-                    </div>
-
-                    <div class="card-formacao">
-                        <h3>ORIGAMID</h3>
-                        <p>UX/UI Design Avançado</p>
-                        <P>Carga horária - 96hrs</P>
+                        <p>HTML & CSS | UX/UI Design Avançado</p>
+                        <P>Carga horária - 142hrs</P>
                         <span>CONCLUÍDO</span>
                     </div>
-
-
                 </div>
         </section>
 
