:art: feat: alterado tonalidade das cores

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </div>
 
                     <div class="card-formacao">
-                        <h3>LOGI SISTEMAS</h3>
+                        <h3>LOG SISTEMAS</h3>
                         <p>Banco de dados | SQL Server</p>
                         <P>Carga horária - 80hrs</P>
                         <span>CONCLUIDO</span>
