feat: novo projeto add - animais fantasticos

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <span>CONCLUÍDO</span>
                     </div>
 
-            
+
                     <div class="card-formacao">
                         <h3>ORIGAMID</h3>
                         <p>HTML & CSS | UX/UI Design Avançado</p>
@@ -173,7 +173,7 @@
                     </div>
                     <div class="img-projeto">
                         <div class="overlay">
-                            <a href="https://fmota-dev.github.io/projeto-canesfit/" target="_blank">Canesfit
+                            <a href="https://fmota-dev.github.io/projeto-fantasticAnimals/" target="_blank">Animais Fantásticos
                                 <img src="./assets/imgs/icon-link.svg" alt="">
                             </a>
                         </div>
