--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Desenvolvimento Web, Front-end, Back-end, Mobile, UX/UI Design, HTML, CSS, JavaScript, React, Node.js, PHP, MySQL, MongoDB, Figma, Adobe XD, Photoshop, Illustrator">
     <meta name="author" content="Filipe Mota - fmota-dev">
 
-    <link rel="stylesheet" href="./assets/css/style.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/imgs/img-principal.svg" type="image/svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -173,11 +173,12 @@
                     </div>
                     <div class="img-projeto">
                         <div class="overlay">
-                            <a href="https://fmota-dev.github.io/projeto-fantasticAnimals/" target="_blank">Animais Fantásticos
+                            <a href="https://fmota-dev.github.io/projeto-rentailx/" target="_blank">RentalX
                                 <img src="./assets/imgs/icon-link.svg" alt="">
                             </a>
                         </div>
                     </div>
+                    
                     <div class="img-projeto">
                         <div class="overlay">
                             <a href="https://fmota-dev.github.io/projeto-surfnat/" target="_blank">Surfnat
@@ -187,11 +188,12 @@
                     </div>
                     <div class="img-projeto">
                         <div class="overlay">
-                            <a href="https://fmota-dev.github.io/projeto-wildbeast/" target="_blank">Wildbeast
+                            <a href="https://fmota-dev.github.io/projeto-fantasticAnimals/" target="_blank">Animais Fantásticos
                                 <img src="./assets/imgs/icon-link.svg" alt="">
                             </a>
                         </div>
                     </div>
+                    
                 </div>
             </div>
             <a href="https://github.com/fmota-dev" target="_blank" class="btn-contato">
