--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Criatividade e inovação andam lado a lado. Com uma combinação única de design 
+    <meta name="description"
+        content="Criatividade e inovação andam lado a lado. Com uma combinação única de design 
     impactante, funcionalidade intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.">
-    <meta name="keywords" content="Desenvolvimento Web, Front-end, Back-end, Mobile, UX/UI Design, HTML, CSS, JavaScript, React, Node.js, PHP, MySQL, MongoDB, Figma, Adobe XD, Photoshop, Illustrator">
+    <meta name="keywords"
+        content="Desenvolvimento Web, Front-end, Back-end, Mobile, UX/UI Design, HTML, CSS, JavaScript, React, Node.js, PHP, MySQL, MongoDB, Figma, Adobe XD, Photoshop, Illustrator">
     <meta name="author" content="Filipe Mota - fmota-dev">
 
     <link rel="stylesheet" href="./assets/css/style.min.css">
@@ -15,7 +17,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,600&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -45,7 +48,9 @@
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
                     <li><a href="#formacao">Formação</a></li>
+                    <li><a href="#certificacoes">Certificacoes</a></li>
                     <li><a href="#projetos">Projetos</a></li>
+
                 </ul>
                 <div class="btn-contato">
                     <a href="#fale-comigo">
@@ -68,6 +73,7 @@
                     <ul>
                         <li><a href="#inicio">Inicio</a></li>
                         <li><a href="#formacao">Formação</a></li>
+                        <li><a href="#certificacoes">Certificacoes</a></li>
                         <li><a href="#projetos">Projetos</a></li>
                         <li><a href="#fale-comigo">Fale comigo</a></li>
                     </ul>
@@ -84,12 +90,16 @@
         <section class="inicio" id="inicio">
             <div class="container">
                 <div class="txt-inicio">
-                    <h1 class="fadeInDown" data-anime="200">Muito prazer, <span data-anime="200">me chamo Filipe Mota.</span></h1>
+                    <h1 class="fadeInDown" data-anime="200">Muito prazer, <span data-anime="200">me chamo Filipe
+                            Mota.</span></h1>
 
-                    <p class="fadeInDown" data-anime="400">Atualmente, estou imerso no universo do Desenvolvimento Web, concentrando meus estudos nas áreas
-                        de <strong>front-end</strong>, <strong>back-end</strong> e <strong>Mobile</strong>. Além de me especializar em <strong>UX/UI Designer</strong>.</p>
+                    <p class="fadeInDown" data-anime="400">Atualmente, estou imerso no universo do Desenvolvimento Web,
+                        concentrando meus estudos nas áreas
+                        de <strong>front-end</strong>, <strong>back-end</strong> e <strong>Mobile</strong>. Além de me
+                        especializar em <strong>UX/UI Designer</strong>.</p>
 
-                    <p class="fadeInDown" data-anime="600"> Estou entusiasmado em aplicar essas habilidades e conhecimentos no cenário do Desenvolvimento
+                    <p class="fadeInDown" data-anime="600"> Estou entusiasmado em aplicar essas habilidades e
+                        conhecimentos no cenário do Desenvolvimento
                         Web, contribuindo para projetos <strong>inovadores</strong> e <strong>desafiadores</strong>.</p>
 
                     <div class="btn-social fadeInDown" data-anime="800">
@@ -156,6 +166,7 @@
                         <span>CONCLUÍDO</span>
                     </div>
                 </div>
+            </div>
         </section>
 
         <section class="projetos linha-detalhe js-scroll" id="projetos">
@@ -178,7 +189,7 @@
                             </a>
                         </div>
                     </div>
-                    
+
                     <div class="img-projeto">
                         <div class="overlay">
                             <a href="https://fmota-dev.github.io/projeto-surfnat/" target="_blank">Surfnat
@@ -188,17 +199,63 @@
                     </div>
                     <div class="img-projeto">
                         <div class="overlay">
-                            <a href="https://fmota-dev.github.io/projeto-fantasticAnimals/" target="_blank">Animais Fantásticos
+                            <a href="https://fmota-dev.github.io/projeto-fantasticAnimals/" target="_blank">
+                                AnimaisFantásticos
                                 <img src="./assets/imgs/icon-link.svg" alt="">
                             </a>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
             <a href="https://github.com/fmota-dev" target="_blank" class="btn-contato">
                 <button>VER MAIS NO GITHUB <i class="bi bi-github"></i></button>
             </a>
+        </section>
+
+        <section class="certificacoes linha-detalhe js-scroll" id="certificacoes">
+            <div class="container ">
+                <h2 class="titulo ">
+                    meus <span>certificados.</span>
+                </h2>
+
+                <div class="box-certificados">
+                    <div class="certificados">
+                        <div>
+                            <img src="assets/imgs/certificado-1.jpg" alt="">
+                        </div>
+                        <div>
+                            <img src="assets/imgs/certificado-2.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <h3>Insignias.</h3>
+                    <div class="badges">
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="2b68e778-0852-4e81-9564-5eed8a30f791"
+                            data-share-badge-host="https://www.credly.com">
+                        </div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="46842caf-421a-43af-980e-09f67f4278f5"
+                            data-share-badge-host="https://www.credly.com">
+                        </div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="8061fd67-3034-4235-b4e3-edd87ad04a0a"
+                            data-share-badge-host="https://www.credly.com">
+                        </div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                        <div data-iframe-width="150" data-iframe-height="270"
+                            data-share-badge-id="9290ecf4-a777-4f24-a973-380116f208bc"
+                            data-share-badge-host="https://www.credly.com">
+                        </div>
+                        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                    </div>
+                </div>
+
+
+            </div>
         </section>
 
         <section class="formulario linha-detalhe js-scroll" id="fale-comigo">
@@ -210,7 +267,8 @@
                 <div class="txt-formulario">
                     <form action="" method="get" id="meuFormulario">
                         <label for="mensagem">Do que você precisa, <span>minha autarquia</span>? </label>
-                        <textarea name="mensagem" id="mensagem" cols="30" rows="10" placeholder="Sua mensagem" required></textarea>
+                        <textarea name="mensagem" id="mensagem" cols="30" rows="10" placeholder="Sua mensagem"
+                            required></textarea>
                         <div class="btn-container ">
                             <button id="enviar-mensagem" class="btn-contato" type="submit">
                                 ENVIAR NO WHATSAPP
@@ -231,7 +289,6 @@
                         </div>
                     </form>
                 </div>
-
         </section>
 
     </main>
