modificar badges e add border top

--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@
                         </div>
                     </div>
 
-                    <h3>Insignias.</h3>
+                    <h3>
+                        minhas <span>Insignias.</span>
+                    </h3>
                     <div class="badges">
                         <div data-iframe-width="150" data-iframe-height="270"
                             data-share-badge-id="2b68e778-0852-4e81-9564-5eed8a30f791"
