ajustar alinhamento do texto certificados

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
                     <li><a href="#formacao">Formação</a></li>
-                    <li><a href="#certificacoes">Certificacoes</a></li>
+                    <li><a href="#certificacoes">Certificações</a></li>
                     <li><a href="#projetos">Projetos</a></li>
 
                 </ul>
@@ -73,7 +73,7 @@
                     <ul>
                         <li><a href="#inicio">Inicio</a></li>
                         <li><a href="#formacao">Formação</a></li>
-                        <li><a href="#certificacoes">Certificacoes</a></li>
+                        <li><a href="#certificacoes">Certificações</a></li>
                         <li><a href="#projetos">Projetos</a></li>
                         <li><a href="#fale-comigo">Fale comigo</a></li>
                     </ul>
