alterar btn de contato e menu mobile

--- a/index.html
+++ b/index.html
@@ -44,45 +44,15 @@
                 </a>
             </div>
 
-            <nav class="menu-desktop">
-                <ul>
-                    <li><a href="#inicio">Inicio</a></li>
+            <nav class="menu" data-menu="suave">
+                <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
+                <ul data-menu="list" id="menu">
                     <li><a href="#formacao">Formação</a></li>
                     <li><a href="#certificacoes">Certificações</a></li>
                     <li><a href="#projetos">Projetos</a></li>
-
+                    <li><a class="contato-destaque" href="#fale-comigo">Contato</a></li>
                 </ul>
-                <div class="btn-contato">
-                    <a href="#fale-comigo">
-                        <button>Contato</button>
-                    </a>
-                </div>
             </nav>
-
-
-            <div class="btn-abrir-menu-mobile" id="btn-menu">
-                <i class="bi bi-list"></i>
-            </div>
-
-            <div class="menu-mobile" id="menu-mobile">
-                <div class="btn-fechar">
-                    <i class="bi bi-x-lg"></i>
-                </div>
-
-                <nav>
-                    <ul>
-                        <li><a href="#inicio">Inicio</a></li>
-                        <li><a href="#formacao">Formação</a></li>
-                        <li><a href="#certificacoes">Certificações</a></li>
-                        <li><a href="#projetos">Projetos</a></li>
-                        <li><a href="#fale-comigo">Fale comigo</a></li>
-                    </ul>
-                </nav>
-            </div>
-
-            <div class="overlay-menu" id="overlay-menu">
-
-            </div>
         </div>
     </header>
 
