refatorar código js e adicionar novo perfil

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         content="Desenvolvimento Web, Front-end, Back-end, Mobile, UX/UI Design, HTML, CSS, JavaScript, React, Node.js, PHP, MySQL, MongoDB, Figma, Adobe XD, Photoshop, Illustrator">
     <meta name="author" content="Filipe Mota - fmota-dev">
 
-    <link rel="stylesheet" href="./assets/css/style.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/imgs/img-principal.svg" type="image/svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="img-inicio">
-                    <img data-anime="600" src="../assets/imgs/img-principal.svg" alt="Ilustraç de um desenvolvedor">
+                    <img data-anime="600" src="../assets/imgs/perfil.png" alt="Ilustraç de um desenvolvedor">
                 </div>
             </div>
         </section>
